--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }} /graduate_work
+          images: pablit71/graduate_work
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
