--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - pg_data_todolist:/var/lib/postgresql/data
 
     healthcheck:
-      test: pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}
+      test: pg_isready -U pavel -d todolist
       interval: 5s
       timeout: 3s
       retries: 3
