add serializers login

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     env_file:
-      - ./.env
+      - .env
     environment:
       POSTGRES_HOST: postgres
     depends_on:
