--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,11 @@ ansible==6.5.0
 asgiref==3.5.2
 Django==4.1.2
 django-environ==0.9.0
+djangorestframework==3.14.0
 Pillow==9.2.0
 psycopg2-binary==2.9.4
+social-auth-app-django==5.0.0
+social-auth-app-django-mongoengine==1.0.0
+social-auth-core==4.3.0
+social-auth-storage-mongoengine==1.0.1
 sqlparse==0.4.3
