--- a/deploy/.env
+++ b/deploy/.env
@@ -2,3 +2,5 @@ SECRET_KEY=7bb4ea783811623cffe96ef23579554a
 POSTGRES_PASSWORD=8777eeecaa01e34bd958dae4d415bb5a
 POSTGRES_USER=pavel
 POSTGRES_DB=todolist
+VK_OAUTH2_KEY=51455139
+VK_OAUTH2_SECRET=pQkC8iNbdMs9kHeoyP0g
