--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,8 +2,9 @@ ansible==6.5.0
 asgiref==3.5.2
 Django==4.1.2
 django-environ==0.9.0
+django-filter==22.1
 djangorestframework==3.14.0
-Pillow==9.2.0
+Pillow==9.3.0
 psycopg2-binary==2.9.4
 social-auth-app-django==5.0.0
 social-auth-core==4.3.0
