--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,6 +6,10 @@ django-filter==22.1
 djangorestframework==3.14.0
 Pillow==9.3.0
 psycopg2-binary==2.9.4
+pydantic==1.10.2
+pyTelegramBotAPI==4.7.1
+requests==2.28.1
 social-auth-app-django==5.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.3
+telebot==0.0.4
