--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,21 @@ services:
     ports:
       - "5432:5432"
 
+  bot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_HOST: postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: python manage.py runbot
+
+
   frontend:
     image: sermalenk/skypro-front:lesson-38
     restart: always
